Add bandit security linter
Bandit detects potential security issues in code. This patch adds
it to tox. Some of the issues found need to be fixed prior to
introducing into a gate job.

Change-Id: Id902d8b95626f98d79755cbab9144b2d6041f66e

--- a/tox.ini
+++ b/tox.ini
@@ -53,6 +53,10 @@ commands =
   neutron-db-manage --subproject vmware-nsx check_migration
 whitelist_externals = sh
 
+[testenv:bandit]
+deps = -r{toxinidir}/test-requirements.txt
+commands = bandit -r vmware_nsx -n 5 -ll
+
 [testenv:cover]
 commands =
   python setup.py testr --coverage --testr-args='{posargs}'
